# cargo-generate-rosalind-template

./: .gitignore  Cargo.toml  test.sh
.cargo/: config.toml
benches/: benchmark.rs
src/: lib.rs  main.rs
tests/: test-1.txt
