[package]
name = "app"
version = "0.1.0"
authors = ["Steven Liebregt <s.liebregt@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosalind_test_reader = "0.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
